Implement shared database key system for synchronization with REZERO-MD

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ OWNER_ID=
 MOD_IDS=
 SUPPORT_CHANNEL_ID=
 
+# Shared Database Key for synchronization
+DATABASE_KEY=mudaubotsconnet
+
 # External bot data path
 EXTERNAL_DATA_PATH=../REZERO-MD/data
 
