Implement Remote API client and add help, fav, card commands

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,9 @@ SUPPORT_CHANNEL_ID=
 # Shared Database Key for synchronization
 DATABASE_KEY=mudaubotsconnet
 
-# External bot data path
-EXTERNAL_DATA_PATH=../REZERO-MD/data
+# External bot API settings (for cross-panel synchronization)
+EXTERNAL_BOT_API_URL=http://your-rezero-ip:3000
+API_PORT=3000
 
 # Card spawn settings in seconds
 CARD_SPAWN_MIN=600
