Transform into standalone bot with 80+ commands and free collection

--- a/.env.example
+++ b/.env.example
@@ -5,17 +5,14 @@ OWNER_ID=
 MOD_IDS=
 SUPPORT_CHANNEL_ID=
 
-# Shared Database Key for synchronization
-DATABASE_KEY=mudaubotsconnet
+# Spawn Channels (IDs separated by commas)
+SPAWN_CHANNELS=123456789,987654321
 
-# External bot API settings (for cross-panel synchronization)
-EXTERNAL_BOT_API_URL=http://your-rezero-ip:3000
-API_PORT=3000
-
-# Card spawn settings in seconds
-CARD_SPAWN_MIN=600
-CARD_SPAWN_MAX=1800
+# Card spawn settings in seconds (5-10 minutes = 300-600 seconds)
+CARD_SPAWN_MIN=300
+CARD_SPAWN_MAX=600
 
 # Cooldowns
 CLAIM_COOLDOWN=10
 BATTLE_COOLDOWN=60
+DAILY_REWARD=500
