Complete rewrite: Discord Card Collecting Bot (discord.js v14)

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
-BOT_TOKEN=
-CLIENT_ID=
+# Bot Configuration
+DISCORD_TOKEN=your_bot_token_here
 PREFIX=.
-OWNER_ID=
-MOD_IDS=
-SUPPORT_CHANNEL_ID=
+OWNER_ID=your_discord_id_here
 
-# Spawn Channels (IDs separated by commas)
-SPAWN_CHANNELS=123456789,987654321
+# Channel Configuration
+# Spawn only happens in these channels (comma separated)
+SPAWN_CHANNELS=channel_id_1,channel_id_2
 
-# Card spawn settings in seconds (5-10 minutes = 300-600 seconds)
-CARD_SPAWN_MIN=300
-CARD_SPAWN_MAX=600
+# Bot only works in these channels or categories (comma separated)
+ALLOWED_CHANNELS=channel_id_1,channel_id_2,channel_id_3
 
-# Cooldowns
-CLAIM_COOLDOWN=10
-BATTLE_COOLDOWN=60
-DAILY_REWARD=500
+# Database Configuration
+MONGO_URI=mongodb://localhost:27017/decards
+
+# Additional Settings
+BOT_STATUS=Collecting Cards!
+COOLDOWN_TIME=3000
