--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "discord-cards-bot",
+  "name": "decards-dmd",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A pure card-collecting Discord bot using discord.js v14",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.13.4",
-    "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3",
-    "fs-extra": "^11.3.3",
-    "node-cron": "^4.2.1",
-    "path": "^0.12.7"
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.4.1",
+    "mongoose": "^8.1.1",
+    "ms": "^2.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
