--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "decards-dmd",
+  "name": "recards-dmd",
   "version": "1.0.0",
-  "description": "A pure card-collecting Discord bot using discord.js v14",
+  "description": "A pure card-collecting Discord bot using discord.js v14 with JSON database",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -10,7 +10,6 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
-    "mongoose": "^8.1.1",
     "ms": "^2.1.3"
   },
   "devDependencies": {
